welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:30: error: not found: value decalage
    decalage = litMessage().toInt
    ^Array2:33: error: not found: value decalage
    Brosse(T(k+decalage))
               ^